jira-sm/base/jira-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jira
  labels:
    app: jira-servicemanagement
spec:
  serviceName: "jira"
  replicas: 1
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
      - image: gcr.io/spectro-images-public/jira/jira-servicemanagement-mysql:latest
        name: jira-servicemanagement-mysql
        readinessProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 600
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: local-home
          mountPath: /var/atlassian/application-data/jira
  volumeClaimTemplates:
  - metadata:
      name: local-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
