jira-sm/base/jira-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #more_set_headers "X-Frame-Options: Deny";
  name: jira-nginx
spec:
  rules:
    - host: $(INGRESS_HOST)
      http:
        paths:
          - backend:
              serviceName: jira
              servicePort: 8080
            path: /
